# EdgeExtractFromOBJ

./: .gitignore  CMakeLists.txt  README.md  file_io.cpp  file_io.h  main.cpp  plane_extractor.cpp  plane_extractor.h  types.h
